[package]
name = "calaxite"
version = "0.1.0"
readme = "./Readme.md"
authors = ["George Burton <burtonageo@gmail.com>"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[dependencies]
simplecolor = {git = "https://github.com/burtonageo/simplecolor"}
input_map   = {git = "https://github.com/burtonageo/input_map"} # <- Offending git line

nalgebra = "0.2.20"
piston = "0.5.0"
piston2d-graphics = "0.4.1"
piston2d-opengl_graphics = "0.6.0"
pistoncore-glutin_window = "0.7.1"
piston-viewport = "0.1.0"
